--- a/public/index.html
+++ b/public/index.html
@@ -410,10 +410,15 @@
         <footer>
             <div class="footer-content">
                 <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-discord"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-telegram"></i></a>
+                    <a href="https://whatsapp.com/channel/0029Vb6dsyP3rZZgNJUD2F1A" class="social-link" target="_blank">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="https://www.facebook.com/obito.ot.2025?mibextid=ZbWKwL" class="social-link" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://t.me/obito_md00" class="social-link" target="_blank">
+                        <i class="fab fa-telegram-plane"></i>
+                    </a>
                 </div>
                 <p class="copyright">© 2023 OBITO APIS. جميع الحقوق محفوظة.</p>
             </div>
