--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,8 @@
+/*
+حلال عليكم 
+بواسطة اوبيتو
+*/
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -935,7 +940,7 @@
             <div class="footer-content">
                 <div class="copyright">© 2024 OBITO APIS. جميع الحقوق محفوظة.</div>
                 <nav class="footer-links">
-                    <a href="https://wa.me/6287778086456" target="_blank" class="footer-link">
+                    <a href="https://wa.me/212662023605" target="_blank" class="footer-link">
                         <i class="fas fa-envelope"></i>
                         اتصل بنا
                     </a>
@@ -1217,4 +1222,4 @@
         }
     </script>
 </body>
-</html>
+    </html>
